// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Click form to get test coverage 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please fill in your email address to request a password reset
  </div>
  <form
    className="sign-in-form"
    id="forgot-password-form"
    onSubmit={[Function]}
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="text"
      value=""
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="submit"
      onClick={[Function]}
      type="submit"
      value="Reset password"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      id="sign-in-form-text"
      onClick={[Function]}
    >
      Already have an account?  Click here to sign in
    </p>
  </form>
</Fragment>
`;

exports[`Click sign in form text 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please fill in your email address to request a password reset
  </div>
  <form
    className="sign-in-form"
    id="forgot-password-form"
    onSubmit={[Function]}
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="text"
      value=""
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="submit"
      onClick={[Function]}
      type="submit"
      value="Reset password"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      id="sign-in-form-text"
      onClick={[Function]}
    >
      Already have an account?  Click here to sign in
    </p>
  </form>
</Fragment>
`;

exports[`Should render 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please fill in your email address to request a password reset
  </div>
  <form
    className="sign-in-form"
    id="forgot-password-form"
    onSubmit={[Function]}
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="text"
      value=""
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="submit"
      onClick={[Function]}
      type="submit"
      value="Reset password"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      id="sign-in-form-text"
      onClick={[Function]}
    >
      Already have an account?  Click here to sign in
    </p>
  </form>
</Fragment>
`;

exports[`Should render with WebP 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.webp"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please fill in your email address to request a password reset
  </div>
  <form
    className="sign-in-form"
    id="forgot-password-form"
    onSubmit={[Function]}
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="text"
      value=""
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="submit"
      onClick={[Function]}
      type="submit"
      value="Reset password"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      id="sign-in-form-text"
      onClick={[Function]}
    >
      Already have an account?  Click here to sign in
    </p>
  </form>
</Fragment>
`;

exports[`Submit password change 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please fill in your email address to request a password reset
  </div>
  <div
    className="lds-ring"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</Fragment>
`;

exports[`Submit password change and respond with failure 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please fill in your email address to request a password reset
  </div>
  <div
    className="error-callout"
  >
    <p>
      failed
    </p>
  </div>
  <div
    className="spacer"
  />
  <form
    className="sign-in-form"
    id="forgot-password-form"
    onSubmit={[Function]}
  >
    <input
      className="filled"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="text"
      value="testing@buildingim.com"
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="submit"
      onClick={[Function]}
      type="submit"
      value="Reset password"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      id="sign-in-form-text"
      onClick={[Function]}
    >
      Already have an account?  Click here to sign in
    </p>
  </form>
</Fragment>
`;

exports[`Submit password change and respond with success 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please fill in your email address to request a password reset
  </div>
  <div
    className="password-request-success"
  >
    <h3>
      Your change password request was successful, please check your email inbox
    </h3>
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="submit"
      onClick={[Function]}
      type="submit"
      value="Back to login page"
    />
  </div>
</Fragment>
`;
